Agrego sección productos.html

--- a/index.html
+++ b/index.html
@@ -33,27 +33,25 @@
 </header>
 
 <main>
-    <section class="container" id="home">
-        <div class="banner">
+    <section class="container" id="banner">
+        <div class="banner__content">
             <div class="banner__text">
                 <h1>Mirá el mundo a través de Lumen.</h1>
-                <p>Pensados para acompañarte en cada momento y resaltar tu estilo único. Calidad, diseño y protección en un solo lugar.</p>
+                <p>Pensados para acompañarte en cada momento y resaltar tu estilo único. Calidad, diseño y protección en
+                    un solo lugar.</p>
                 <div class="banner__actions">
                     <a class="button" href="">Nuestros Lentes</a>
-                    <a class="button--secondary" href="">Agendá una cita</a>
+                    <a class="button--outline" href="">Agendá una cita</a>
                 </div>
 
                 <div class="banner__testimonials">
-
                     <div class="testimonials__text">
                         <i class="fi fi-sr-star"></i><i class="fi fi-sr-star"></i><i class="fi fi-sr-star"></i>
                         <p>+10 mil reseñas positivas</p>
                     </div>
-
                     <div class="testimonials__icon">
                         <i class="fi fi-tr-thumbs-up-trust"></i>
                     </div>
-
                 </div>
 
             </div>
@@ -65,7 +63,7 @@
         </div>
     </section>
 
-    <section class="testimonials container" id="testimonials">
+    <section class="container" id="testimonials">
         <h2 class="testimonials__title">Lo que dicen nuestros clientes</h2>
         <p class="testimonials__subtitle">Experiencias reales de personas que confiaron en Lumen.</p>
 
@@ -135,10 +133,10 @@
               <div class="promo-banner__text">
                   <h2>✨ Promoción Exclusiva ✨</h2>
                   <p>Aprovechá <strong>30% OFF</strong> en lentes de sol seleccionados.<br> Solo por tiempo limitado.</p>
-                  <a href="#featured" class="button">Ver descuentos</a>
+                  <a href="#featured" class="button--secondary">Ver descuentos</a>
               </div>
               <div class="promo-banner__image">
-                  <img src="./img/glasses-promo.webp" alt="Lentes de sol en promoción">
+                  <img src="./img/white-glasses.webp" alt="Lentes de sol en promoción">
               </div>
           </div>
       </div>
@@ -183,7 +181,7 @@
             <p class="footer__hint">Novedades, lanzamientos y promos (cero spam).</p>
             <form class="footer__form" action="#" method="post">
                 <input id="newsletter-email" name="email" type="email" placeholder="tu@email.com" required>
-                <button class="button" type="submit">Suscribirme</button>
+                <button class="button--secondary" type="submit">Suscribirme</button>
             </form>
         </div>
     </div>
