--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -115,7 +115,7 @@
                 <h2>Compromiso con la comunidad</h2>
                 <p>Participamos en campañas de donación de armazones y jornadas de chequeo visual en escuelas de la
                     zona.</p>
-                <a class="button--secondary" href="./contacto.html">Sumate o consultá</a>
+                <a class="button--outline" href="./contacto.html">Sumate o consultá</a>
             </div>
             <div class="commitment__media">
                 <img src="../img/community.webp" alt="Jornada de control visual en la comunidad"
@@ -131,7 +131,7 @@
             <p>Agendá una visita y te ayudamos a elegir según tu graduación, uso y estilo de vida.</p>
             <div class="cta__actions">
                 <a class="button" href="./contacto.html">Agendar</a>
-                <a class="button--secondary" href="./productos.html">Ver catálogo</a>
+                <a class="button--outline" href="./productos.html">Ver catálogo</a>
             </div>
         </div>
     </section>
@@ -170,7 +170,7 @@
             <p class="footer__hint">Novedades, lanzamientos y promos (cero spam).</p>
             <form class="footer__form" action="#" method="post">
                 <input id="newsletter-email" name="email" type="email" placeholder="tu@email.com" required/>
-                <button class="button" type="submit">Suscribirme</button>
+                <button class="button--secondary" type="submit">Suscribirme</button>
             </form>
         </div>
     </div>
