--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
       <div class="promo-banner">
           <div class="promo-banner__content container">
               <div class="promo-banner__text">
-                  <h2>✨ Promoción Exclusiva ✨</h2>
+                  <h2>
+                      <span><i class="fi fi-tr-badge-percent"></i></span>
+                      Promoción Exclusiva
+                  </h2>
                   <p>Aprovechá <strong>30% OFF</strong> en lentes de sol seleccionados.<br> Solo por tiempo limitado.</p>
                   <a href="./pages/productos.html" class="button--secondary">Ver descuentos</a>
               </div>
