--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -42,7 +42,7 @@
         </div>
         <div class="about__content">
             <h2>Nuestra historia</h2>
-            <p>Nacimos en una galería con una idea simple: hacer que elegir anteojos sea fácil y placentero. Mezclamos
+            <p>Nacimos con una idea simple: hacer que elegir anteojos sea fácil y placentero. Mezclamos
                 propuestas de diseño con tecnología óptica para que cada persona encuentre su par ideal.</p>
             <p>Con el tiempo, sumamos laboratorios aliados, marcas independientes y líneas propias. Hoy, seguimos
                 creciendo con el mismo foco: atención genuina y productos durables.</p>
@@ -55,7 +55,7 @@
         <p class="team__intro">Ópticos, contactólogos y asesores que te acompañan en todo el proceso.</p>
 
         <div class="team__deck">
-            <!-- Destacada (full width) -->
+            <!-- Destacada -->
             <article class="team__member team__member--lead">
                 <div class="team__media">
                     <img src="../img/doctor-4.jpg" alt="Mario, Óptica Contactóloga">
