--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li class="nav__item"><a class="nav__link" href="#">Inicio</a></li>
                 <li class="nav__item"><a class="nav__link" href="./pages/nosotros.html">Nosotros</a></li>
                 <li class="nav__item"><a class="nav__link" href="./pages/productos.html">Productos</a></li>
+                <li class="nav__item"><a class="nav__link" href="./pages/promociones.html">Promociones</a></li>
                 <li class="nav__item"><a class="nav__link" href="./pages/contacto.html">Contacto</a></li>
             </ul>
             <!-- Close button -->
